fixed margin on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ body {
 } */
 
 @media (max-width: 991px) {
-  .card {
-    margin: 10px;
-  }
+  /* .card {
+    margin: 5px;
+  } */
 }
